# badgePython

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  config.sh  flash.sh  install.sh  monitor.sh  setenv.sh
.github/workflows/: codeql.yml
boards/: upstream
boards/DEFAULT/: manifest.py  mpconfigboard.cmake  partitions.csv  sdkconfig.board
components/: external_micropy_modules.cmake
components/buses/: CMakeLists.txt  buses.c
components/driver_display2pax/: CMakeLists.txt  Kconfig  moddisplay.c  project_include.cmake
components/driver_display_depg0290b1/: CMakeLists.txt  Kconfig  project_include.cmake
components/driver_display_depg0290b1/esp32-component-spi-depg0290b1/: CMakeLists.txt  depg0290b1.c
components/driver_display_depg0290b1/esp32-component-spi-depg0290b1/include/: depg0290b1.h
components/driver_display_depg0290b1/include/: framebuffer_display.h
components/driver_display_hub75/: Kconfig  compositor.c  driver_hub75.c  font_6x3.c  font_7x5.c  i2s_parallel.c  modhub75.c
components/driver_display_ili9341/: CMakeLists.txt  Kconfig  component.mk  driver_ili9341.c
components/driver_display_ssd1306/: CMakeLists.txt  driver_ssd1306.c  project_include.cmake
components/driver_display_ssd1306/include/: framebuffer_display.h
components/driver_framebuffer/: CMakeLists.txt  driver_framebuffer.cpp  driver_framebuffer_matrix.cpp  driver_framebuffer_matrix_drawing.cpp  driver_framebuffer_text.cpp  moddisplay.c
components/driver_framebuffer/include/: driver_framebuffer.h  driver_framebuffer_compositor.h  driver_framebuffer_matrix.h
components/driver_framebuffer/png/: png_reader.c  png_reader.h
components/driver_fsoverbus/: CMakeLists.txt  driver_fsoverbus.c  packetutils.c  specialfunctions.c
components/driver_input_mpr121/: CMakeLists.txt  driver_mpr121.c  modmpr121.c  project_include.cmake
components/driver_input_mpr121/include/: driver_mpr121.h
components/driver_launcher/: CMakeLists.txt  Kconfig  modlauncher.c  project_include.cmake
components/driver_mch22/: CMakeLists.txt  modmch22.c  project_include.cmake
components/driver_mch22_rp2040/: CMakeLists.txt  modmch22.c
components/driver_pax/: CMakeLists.txt  Kconfig  fonts.md  fonts_to_render.json  project_include.cmake
components/driver_rtcmem/: driver_rtcmem.c  micropy_module.cmake  modrtcmem.c
components/driver_sdcard/: project_include.cmake
components/driver_sndmixer/: CMakeLists.txt  Kconfig  driver_i2s.c  modsndmixer.c  snd_source_mp3.c
components/heapspace_tracker/: Kconfig
components/libopus/: CMakeLists.txt
components/micropython/: CMakeLists.txt  help.c  main.c  micropython_main.h  mpconfigboard.h  mpconfigover_generator.py
components/micropython/esp32/: machine_hw_spi.c  machine_i2c.c
components/micropython/vfs_fat/: moduos.c  vfs_native.c  vfs_native.h
components/pynvs/: CMakeLists.txt  micropy_module.cmake  modnvs.c
components/pywpa2enterprise/: CMakeLists.txt  modwpa2enterprise.c  modwpa2enterprise.h  project_include.cmake  wifi_connect.c  wifi_connect.h  wifi_connection.c  wifi_connection.h
config/defconfigs/: generic_defconfig
config/partition_tables/: generic_4MB.csv
configs/: campzone2019_defconfig  campzone2020_defconfig  default_defconfig  mch2022_defconfig  sha2017_defconfig  troopers2023_defconfig
docs/: README.md
firmware/: CMakeLists.txt  sdkconfig
firmware/components/driver_display_eink/: CMakeLists.txt
firmware/components/driver_display_generic_i2c/: CMakeLists.txt
firmware/components/driver_display_hub75/: CMakeLists.txt  Kconfig  driver_hub75.c  i2s_parallel.c  modhub75.c  project_include.cmake
firmware/components/driver_display_hub75/include/: compositor.h
firmware/components/driver_display_ili9341/: CMakeLists.txt  Kconfig  driver_ili9341.c
firmware/components/driver_display_ili9341/include/: driver_ili9341.h
firmware/components/driver_display_sh1106/: CMakeLists.txt  Kconfig  driver_sh1106.c  project_include.cmake
firmware/components/driver_display_sh1106/include/: driver_sh1106.h
firmware/components/driver_display_ssd1306/: CMakeLists.txt  driver_ssd1306.c
firmware/components/driver_framebuffer/: CMakeLists.txt  driver_framebuffer.cpp  moddisplay.c  project_include.cmake
firmware/components/driver_framebuffer/include/: driver_framebuffer_devices.h
firmware/components/driver_led_neopixel/: CMakeLists.txt
firmware/components/driver_mch22_rp2040/: CMakeLists.txt  modmch22.c  modrp2040.c  project_include.cmake
firmware/components/driver_sdcard/: CMakeLists.txt  driver_sdcard.c  modsdcard.c
firmware/components/libopus/: CMakeLists.txt
firmware/components/micropython/: CMakeLists.txt  main.c  micropython_main.h  modconsts.c  mpconfigboard.h  mpconfigover_generator.py  mpconfigport.h
firmware/components/micropython/esp32/: machine_i2c.c
firmware/components/micropython/vfs_fat/: vfs.c  vfs_native.c  vfs_native.h  vfs_native_file.c  vfs_native_misc.c  vfs_reader.c
firmware/configs/: campzone2019_defconfig  core_defconfig  ekeyboard_defconfig  mch2022_defconfig  pixel_defconfig
firmware/main/: CMakeLists.txt  Kconfig.projbuild  factory_reset.c  main.c  ota_update.c  platform.c  platform_gen.c  platform_generator.py  system.c  zip.c
firmware/main/include/: platform.h
firmware/manifests/: campzone2019.py  campzone2020.py  ekeyboard.py  mch22.py  pixel.py
firmware/obsolete_components/driver_touchbuttons/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c  ota_update.c  platform.c
main/include/: micropython_main.h  platform_gen.h
manifests/: campzone2019.py  core.py  manifest.py  mch2022.py  troopers2023.py
obsolete_components/: README.md
obsolete_components/driver_led_neopixel/: driver_neopixel.c  project_include.cmake
obsolete_components/driver_touchbuttons/: modtouchbuttons.c
partition_tables/: campzone2019.csv  default.csv  mch2022.csv  pixel.csv  sha2017.csv
python_modules/campzone2019/: boot.py  factory_checks.py  mpu6050.py  system.py
python_modules/campzone2020/: _boot.py  boot.py
python_modules/common-untested/: woezel.py
(+130 files in other folders)
