set(srcs
    "src/analysis.c"
    "src/mlp.c"
    "src/opus.c"
    "src/opus_decoder.c"
    "src/opus_encoder.c"
    "src/opus_multistream_decoder.c"
    "src/opus_projection_decoder.c"
    "src/repacketizer.c"
    "src/mapping_matrix.c" 
    "src/mlp_data.c"
    "src/opus_compare.c" 
    "src/opus_demo.c"
    "src/opus_multistream.c"
    "src/opus_multistream_encoder.c"
    "src/opus_projection_encoder.c"
    "src/repacketizer_demo.c"

    "silk/A2NLSF.c"
    "silk/debug.c"
    "silk/encode_pulses.c"
    "silk/LPC_inv_pred_gain.c"
    "silk/NSQ_del_dec.c"
    "silk/resampler_private_up2_HQ.c"
    "silk/sum_sqr_shift.c"
    "silk/ana_filt_bank_1.c"
    "silk/dec_API.c"
    "silk/gain_quant.c"
    "silk/LP_variable_cutoff.c"
    "silk/pitch_est_tables.c"
    "silk/resampler_rom.c"
    "silk/table_LSF_cos.c"
    "silk/biquad_alt.c"
    "silk/decode_core.c"
    "silk/HP_variable_cutoff.c"
    "silk/NLSF2A.c"
    "silk/PLC.c"
    "silk/shell_coder.c"
    "silk/tables_gain.c"
    "silk/bwexpander_32.c"
    "silk/decode_frame.c"
    "silk/init_decoder.c"
    "silk/NLSF_decode.c"
    "silk/process_NLSFs.c"
    "silk/sigm_Q15.c"
    "silk/tables_LTP.c"
    "silk/bwexpander.c"
    "silk/decode_indices.c"
    "silk/init_encoder.c"
    "silk/NLSF_del_dec_quant.c"
    "silk/quant_LTP_gains.c"
    "silk/sort.c"
    "silk/tables_NLSF_CB_NB_MB.c"
    "silk/check_control_input.c"
    "silk/decode_parameters.c"
    "silk/inner_prod_aligned.c"
    "silk/NLSF_encode.c"
    "silk/resampler.c"
    "silk/stereo_decode_pred.c"
    "silk/tables_NLSF_CB_WB.c"
    "silk/CNG.c"
    "silk/decode_pitch.c"
    "silk/interpolate.c"
    "silk/NLSF_stabilize.c"
    "silk/resampler_down2_3.c"
    "silk/stereo_encode_pred.c"
    "silk/tables_other.c"
    "silk/code_signs.c"
    "silk/decode_pulses.c"
    "silk/lin2log.c"
    "silk/NLSF_unpack.c"
    "silk/resampler_down2.c"
    "silk/stereo_find_predictor.c"
    "silk/tables_pitch_lag.c"
    "silk/control_audio_bandwidth.c"
    "silk/decoder_set_fs.c"
    "silk/log2lin.c"
    "silk/NLSF_VQ.c"
    "silk/resampler_private_AR2.c"
    "silk/stereo_LR_to_MS.c"
    "silk/tables_pulses_per_block.c"
    "silk/control_codec.c"
    "silk/enc_API.c"
    "silk/LPC_analysis_filter.c"
    "silk/NLSF_VQ_weights_laroia.c"
    "silk/resampler_private_down_FIR.c"
    "silk/stereo_MS_to_LR.c"
    "silk/VAD.c"
    "silk/control_SNR.c"
    "silk/encode_indices.c"
    "silk/LPC_fit.c"
    "silk/NSQ.c"
    "silk/resampler_private_IIR_FIR.c"
    "silk/stereo_quant_pred.c"
    "silk/VQ_WMat_EC.c"
)

set(IDF_COMPONENTS
    
    )

set(includes
    "include"
    "celt"
    "silk")

idf_component_register(SRCS "${srcs}"
                       INCLUDE_DIRS ${includes}
                       REQUIRES ${IDF_COMPONENTS})


idf_build_set_property(COMPILE_OPTIONS "-DVAR_ARRAYS" APPEND)
idf_build_set_property(COMPILE_OPTIONS "-DHAVE_CONFIG_H" APPEND)